// proto/global.proto
syntax = "proto3";

package protomanager;

service ProtoManagerService {
  rpc RegisterService(RegisterServiceRequest) returns (RegisterServiceResponse);
  rpc GetService(GetServiceRequest) returns (GetServiceResponse);
}

message RegisterServiceRequest {
  string service_name = 1;
  ServiceMetadata metadata = 2;
}

message RegisterServiceResponse {
  bool success = 1;
  string message = 2;
}

message GetServiceRequest {
  string service_name = 1;
}

message GetServiceResponse {
  ServiceMetadata metadata = 1;
}

message ServiceMetadata {
  string domain = 1;
  string version = 2;
}